[package]
name = "lens-sl"
version = "0.1.0"
edition = "2024"

[dependencies]
arbitrary-int = { version = "2.0.0" }
bitflags = "2.10.0"
derive_more = { version = "2.1.1", features = ["full"] }
functionality = "1.0.0"
# This is the same version as used by arbitrary-int above
rustc-hash = "2.1.1"

[profile.release]
debug = true
